# kitchen-timelapse

./: Cargo.toml  README.md  Rocket.toml  timelapse_starter.sh
camera_api/: Cargo.toml
camera_api/src/: camera_api.rs  main.rs
camera_api/src/timelapse/: encoder.rs  mod.rs
camera_api_consumer/: Cargo.toml
camera_api_consumer/src/: main.rs
src/: main.rs
video_streaming_api/: Cargo.toml
video_streaming_api/src/: main.rs
