[package]
name = "camera_api"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
flexi_logger = "0.17.1"
log-panics = "2.0.0"
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
