[package]
name = "camera_api_consumer"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "*"
reqwest = "0.10.0-alpha.1"
tokio = "0.2.0-alpha.5"
walkdir = "2"
