[package]
name = "video_streaming_api"
version = "0.1.0"
authors = ["Tiberio Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.4.2", default-features = false}
rocket_seek_stream = {git="https://github.com/rydz/rocket_seek_stream"}
chrono = "0.4.11"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.52"
rocket_cors = "0.5.1"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
